--- a/src/main/webapp/emr/patient_profile.xhtml
+++ b/src/main/webapp/emr/patient_profile.xhtml
@@ -154,15 +154,17 @@
                                                             var="item"
                                                             itemLabel="#{item}"
                                                             itemValue="#{item}"
-                                                            placeholder="Select Medicine"
-                                                            />
+                                                            placeholder="Select Medicine" >
+                                                            <p:ajax process="acMedicine" update="cmbDuration" ></p:ajax>
+                                                        </p:autoComplete>
+                                                            
                                                         <p:inputText style="width: 6em;"
                                                                      id="txtDose"
                                                                      value="#{patientEncounterController.patientMedicine.prescription.dose}"
                                                                      placeholder="Dose"/>
                                                         <p:selectOneMenu id="cmbDose" value="#{patientEncounterController.patientMedicine.prescription.doseUnit}" >
                                                             <f:selectItem itemLabel="Select" ></f:selectItem>
-                                                            <f:selectItems value="#{measurementUnitController.doseUnits}" var="du" itemLabel="#{du.name}" itemValue="#{du}" ></f:selectItems>
+                                                            <f:selectItems value="#{measurementUnitController.getDoseUnitsForMedicine(patientEncounterController.patientMedicine.prescription.item)}" var="du" itemLabel="#{du.name}" itemValue="#{du}" ></f:selectItems>
                                                         </p:selectOneMenu>
                                                         <p:selectOneMenu id="cmbFrequency" value="#{patientEncounterController.patientMedicine.prescription.frequencyUnit}" >
                                                             <f:selectItem itemLabel="Select" ></f:selectItem>
