Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/patient_profile.xhtml
+++ b/src/main/webapp/emr/patient_profile.xhtml
@@ -155,7 +155,7 @@
                                                             itemLabel="#{item}"
                                                             itemValue="#{item}"
                                                             placeholder="Select Medicine" >
-                                                            <p:ajax process="acMedicine" update="cmbDuration" ></p:ajax>
+                                                            <p:ajax process="acMedicine" update="cmbDose" ></p:ajax>
                                                         </p:autoComplete>
                                                             
                                                         <p:inputText style="width: 6em;"
