--- a/src/main/webapp/pharmacy/admin/amp.xhtml
+++ b/src/main/webapp/pharmacy/admin/amp.xhtml
@@ -13,20 +13,133 @@
 
         <p:panel  >
             <f:facet name="header" >
-
+                <h:outputLabel value="Manage AMPs" ></h:outputLabel>
             </f:facet>
 
             <div class="row" >
                 <div class="col-6" >
                     <h:form id="formSelect"  >
+                        <p:selectOneListbox 
+                            id="lstSelect" 
+                            class="w-100"
+                            filter="true"
+                            value="#{ampController.current}" 
+                            >
+                            <f:selectItems 
+                                value="#{ampController.items}" 
+                                var="myItem" 
+                                itemValue="#{myItem}" 
+                                itemLabel="#{myItem.name}" ></f:selectItems>
+                            <p:ajax  update=":formDetail:gpDetails" process="lstSelect" >
+                            </p:ajax>
+                        </p:selectOneListbox>
+
+
+                        <p:commandButton
+                            id="btnAdd" 
+                            value="Add New Item" 
+                            action="#{ampController.prepareAdd()}"
+                            class='w-25 m-1 ui-button-success'
+                            process="btnAdd"
+                            update="lstSelect :formDetail:gpDetails"
+                            >
+
+                        </p:commandButton>
+                        <p:commandButton 
+                            id="btnDelete"
+                            class="w-25 ui-button-danger m-1"
+                            onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                        return false;" action="#{ampController.delete()}"  
+                            value="Delete Selected Item" 
+                            process="btnDelete"
+                            update=":formSelect:lstSelect :formDetail:gpDetails">
+
+                        </p:commandButton>
 
                     </h:form>
                 </div>
-            </div>
-
-            <div class="row" >
                 <div class="col-6" >
                     <h:form id="formDetail"  >
+                        <p:commandButton 
+                            id="btnSave" 
+                            value="Save" 
+                            process="btnSave gpDetails"
+                            update=":formSelect:lstSelect :formMsg:msg"
+                            action="#{ampController.save}" 
+                            class="w-25 ui-button-warning m-1">
+                        </p:commandButton>
+
+
+
+                        <p:panelGrid id="gpDetails" columns="2" class="w-100">
+                            <h:outputText  value="Name" class="w-100"></h:outputText>
+                            <p:inputText autocomplete="off" id="txtName"  value="#{ampController.current.name}" styleClass="longText" class="w-100" />
+
+
+                            <h:outputText  value="Code" class="w-100"></h:outputText>
+                            <p:inputText id="code" autocomplete="off"  value="#{ampController.current.code}" class="w-100" ></p:inputText>
+
+
+                            <h:outputText  value="Bar Code" class="w-100"></h:outputText>
+                            <p:inputText autocomplete="off"  value="#{ampController.current.barcode}"  class="w-100"></p:inputText>
+
+                            <h:outputText  value="Product" class="w-100"></h:outputText>
+                            <p:autoComplete  converter="vmp" 
+                                             completeMethod="#{vmpController.completeVmp}"
+                                             var="pta" itemLabel="#{pta.name}" 
+                                             itemValue="#{pta}" 
+                                             forceSelection="true" 
+                                             value="#{ampController.current.vmp}"
+                                             class="w-100"
+                                             inputStyleClass="w-100"
+
+                                             ></p:autoComplete>
+
+
+
+
+
+                            <h:outputText  value="Manufacturer" class="w-100"></h:outputText>
+                            <p:autoComplete  completeMethod="#{manufacturerController.completeManu}"
+                                             var="pta" itemLabel="#{pta.name}" itemValue="#{pta}"
+                                             forceSelection="true"
+                                             class="w-100"
+                                             inputStyleClass="w-100"
+
+                                             value="#{ampController.current.institution}" ></p:autoComplete>
+
+
+                            <h:outputLabel value="Category" class="w-100"/>
+                            <p:autoComplete  value="#{ampController.current.category}" 
+                                             forceSelection="true" 
+                                             completeMethod="#{pharmaceuticalItemCategoryController.completeCategory}" 
+                                             class="w-100"
+                                             inputStyleClass="w-100"
+                                             var="vt" itemLabel="#{vt.name}" itemValue="#{vt}" >
+                                <!--<f:ajax event="itemSelect" render="code" execute="@this"  listener="#{ampController.listnerCategorySelect()}"/>-->
+                            </p:autoComplete>      
+
+                            <h:outputText  value="Department Type" class="w-100"></h:outputText>
+                            <p:selectOneMenu  value="#{ampController.current.departmentType}" class="w-100">
+                                <f:selectItem itemLabel="Select" ></f:selectItem>
+                                <f:selectItems value="#{enumController.departmentType}" ></f:selectItems>
+                            </p:selectOneMenu>
+
+
+
+                            <h:outputText  value="Discount Allowed" class="w-100"></h:outputText>
+                            <p:selectBooleanButton
+                                value="#{ampController.current.discountAllowed}" 
+                                onLabel="Yes"
+                                offLabel="No"
+                                class="w-100" />
+
+
+
+
+                        </p:panelGrid>
+
+
 
                     </h:form>
                 </div>
@@ -40,190 +153,6 @@
             </f:facet>
         </p:panel>
 
-
-
-        <h:panelGroup >
-            <h:form  >
-                <p:panel header="Manage AMPs" >
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p:panel  styleClass="alignTop" >
-                                <h:panelGrid columns="2" id="gpSelectText" class="w-100" >
-                                    <h:outputText value="Search By Name / Code / Barcode"/>
-                                    <p:autoComplete id="lstSelect1"    value="#{ampController.current}" 
-                                                    forceSelection="true"
-                                                    completeMethod="#{ampController.completeAmp}" 
-                                                    var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" >
-                                        <p:column headerText="Item">
-                                            <h:outputLabel value="#{myItem.name}" ></h:outputLabel>
-                                        </p:column>
-                                        <p:column headerText="Code">
-                                            <h:outputLabel value="#{myItem.code}" ></h:outputLabel>
-                                        </p:column>
-                                        <p:column headerText="Barcode">
-                                            <h:outputLabel value="#{myItem.barcode}" ></h:outputLabel>
-                                        </p:column>
-                                        <f:ajax event="itemSelect" render="gpDetail" execute="lstSelect1" >
-                                        </f:ajax>
-                                    </p:autoComplete>
-
-
-                                    <p:commandButton id="btnRefresh" value="Refresh" style="display:none;" ></p:commandButton>
-                                    <p:defaultCommand target="btnRefresh" ></p:defaultCommand>
-
-
-                                </h:panelGrid>
-                                <p:spacer class="w-100" style="height: 2vh;"></p:spacer>
-                                <h:panelGrid id="gpSelectButtons" columns="2" class="w-100" >
-                                    <p:commandButton ajax="false" id="btnAdd" value="Add New Item" action="#{ampController.prepareAdd()}" class='w-100' >
-
-                                    </p:commandButton>
-                                    <p:commandButton ajax="false" id="btnDelete" class="w-100"
-                                                     onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                                 return false;" action="#{ampController.delete()}"  
-                                                     value="Delete Selected Item"  >
-
-                                    </p:commandButton>
-
-                                </h:panelGrid>
-                                <p:spacer style="height: 3vh"/>
-                            </p:panel>
-                        </div>
-
-                        <div class="col-md-6">
-                            <p:panel class="w-100">
-                                <f:facet name="header" >
-                                    <div class=" d-flex justify-content-between">
-                                        <h:outputText value="Item Details" >
-                                        </h:outputText>
-
-                                        <p:commandButton id="btnSave" value="Save" ajax="false" 
-                                                         action="#{ampController.saveSelected}" class="w-25">
-                                        </p:commandButton>
-                                    </div>
-
-                                </f:facet>
-                                <h:panelGrid id="gpDetail" columns="1" class="w-100">
-
-
-                                    <h:panelGrid columns="2" class="w-100">
-                                        <h:outputText  value="Name" class="w-100"></h:outputText>
-                                        <p:inputText autocomplete="off" id="txtName"  value="#{ampController.current.name}" styleClass="longText" class="w-100" />
-
-
-                                        <h:outputText  value="Code" class="w-100"></h:outputText>
-                                        <p:inputText id="code" autocomplete="off"  value="#{ampController.current.code}" class="w-100" ></p:inputText>
-
-
-                                        <h:outputText  value="Department Type" class="w-100"></h:outputText>
-                                        <h:outputText  value="#{ampController.current.departmentType}" class="w-100"></h:outputText>
-
-
-                                        <h:outputText  value="Bar Code" class="w-100"></h:outputText>
-                                        <p:inputText autocomplete="off"  value="#{ampController.current.barcode}"  class="w-100"></p:inputText>
-
-
-                                        <h:outputText  value="Manufacturer" class="w-100"></h:outputText>
-                                        <p:autoComplete  completeMethod="#{manufacturerController.completeManu}"
-                                                         var="pta" itemLabel="#{pta.name}" itemValue="#{pta}"
-                                                         forceSelection="true" 
-                                                         value="#{ampController.current.institution}" ></p:autoComplete>
-
-
-                                        <h:outputLabel value="Category" class="w-100"/>
-                                        <p:autoComplete  value="#{ampController.current.category}" 
-                                                         forceSelection="true" 
-                                                         completeMethod="#{pharmaceuticalItemCategoryController.completeCategory}" 
-                                                         var="vt" itemLabel="#{vt.name}" itemValue="#{vt}" >
-                                            <!--<f:ajax event="itemSelect" render="code" execute="@this"  listener="#{ampController.listnerCategorySelect()}"/>-->
-                                        </p:autoComplete>      
-
-
-                                        <h:outputText  value="Product" class="w-100"></h:outputText>
-                                        <p:autoComplete  converter="vmp" 
-                                                         completeMethod="#{vmpController.completeVmp}"
-                                                         var="pta" itemLabel="#{pta.name}" itemValue="#{pta}" forceSelection="true" value="#{ampController.current.vmp}" ></p:autoComplete>
-
-
-
-                                        <h:outputText  value="Discount Allowed" class="w-100"></h:outputText>
-                                        <h:selectBooleanCheckbox value="#{ampController.current.discountAllowed}" class="w-100" />
-
-
-                                        <h:outputText  value="Created By" class="w-100"></h:outputText>
-                                        <h:outputText  value="#{ampController.current.creater.webUserPerson.name}" class="w-100"></h:outputText>
-
-
-                                        <h:outputText  value="Created at" class="w-100"></h:outputText>
-                                        <h:outputText  value="#{ampController.current.createdAt}" >
-                                            <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" ></f:convertDateTime>
-                                        </h:outputText>
-
-
-
-                                        <h:outputText  value="Last Edited By" class="w-100"></h:outputText>
-                                        <h:outputText  value="#{ampController.current.editer.webUserPerson.name}" ></h:outputText>
-
-
-
-                                        <h:outputText  value="Last Edited at" class="w-100"></h:outputText>
-                                        <h:outputText  value="#{ampController.current.editedAt}" class="w-100">
-                                            <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" ></f:convertDateTime>
-                                        </h:outputText>
-
-
-                                        <p:commandLink id="btnAddVmp" 
-                                                       value="Create New Product" 
-                                                       action="/pharmacy/pharmacy_vmp"/>  
-
-                                    </h:panelGrid>
-                                    <p:dialog id="dlgVmp" widgetVar="dlgVmp"  >
-
-                                        <p:panelGrid columns="2">
-                                            <h:outputLabel value="Generic Name" ></h:outputLabel>
-                                            <p:autoComplete converter="vtm" value="#{ampController.addingVtmInVmp.vtm}"
-                                                            forceSelection="true"
-                                                            completeMethod="#{vtmController.completeVtm}" var="vt"
-                                                            itemLabel="#{vt.name}" itemValue="#{vt}" >
-                                            </p:autoComplete>
-                                            <h:outputLabel value="Strength" />                                                    
-                                            <p:inputText autocomplete="off" value="#{ampController.addingVtmInVmp.strength}" ></p:inputText>
-                                            <h:outputLabel value="Strength Unit" />                                                    
-                                            <p:selectOneMenu value="#{ampController.addingVtmInVmp.strengthUnit}">
-                                                <f:selectItem itemLabel="Select a generic name" ></f:selectItem>
-                                                <f:selectItems value="#{measurementUnitController.items}" var="m" itemValue="#{m}" itemLabel="#{m.name}"/>
-                                            </p:selectOneMenu>  
-
-                                            <h:outputLabel value="Type" ></h:outputLabel>
-                                            <p:autoComplete value="#{ampController.currentVmp.category}"
-                                                            forceSelection="true"
-                                                            completeMethod="#{pharmaceuticalItemTypeController.completeCategory}" 
-                                                            var="vt" itemLabel="#{vt.name}" itemValue="#{vt}" >
-                                            </p:autoComplete>
-
-
-                                            <h:outputLabel value="Name" ></h:outputLabel>
-                                            <p:outputLabel value="#{ampController.currentVmp.name}" />
-
-                                        </p:panelGrid>
-
-
-                                    </p:dialog>
-
-
-
-
-                                </h:panelGrid>
-                            </p:panel>
-                        </div>
-                    </div>
-
-
-                </p:panel>
-            </h:form>
-
-        </h:panelGroup>
 
     </ui:define>
 
