Closes #1652 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/admin/lims/investigation_format_multiple.xhtml
+++ b/src/main/webapp/admin/lims/investigation_format_multiple.xhtml
@@ -20,6 +20,7 @@
                                 <f:facet name="header" >
                                     <h:outputText value="Investigation" ></h:outputText>
                                     <p:commandButton 
+                                        class="mx-2"
                                         value="Back" 
                                         action="/admin/lims/investigation" ajax="false" ></p:commandButton>
 
