--- a/src/main/webapp/admin/lims/investigation_values.xhtml
+++ b/src/main/webapp/admin/lims/investigation_values.xhtml
@@ -15,6 +15,11 @@
                 <h:form id="form">
 
                     <p:panel header="Manage Investigation Report Items" >
+                        <p:commandButton 
+                                value="Back" 
+                                class="my-1"
+                                action="/admin/lims/investigation" ajax="false" ></p:commandButton>
+                        
                         <p:panelGrid columns="2" styleClass="alignTop" >
                             <p:panelGrid columns="1" id="filters" >
                                 <h:panelGrid columns="2" >
