--- a/src/main/webapp/admin/lims/manage_fees.xhtml
+++ b/src/main/webapp/admin/lims/manage_fees.xhtml
@@ -16,6 +16,12 @@
 
                 <h:form>
                     <p:panel header="Manage Item Fees" >
+                        <p:commandButton 
+                                value="Back" 
+                                class="my-1"
+                                action="/admin/lims/investigation" ajax="false" ></p:commandButton>
+                        
+                        
                         <p:panelGrid columns="1" styleClass="alignTop" >
                             <p:panelGrid columns="2" styleClass="alignTop" >
                                 <h:outputLabel value="Select Item" />
