--- a/src/main/webapp/lab/dynamic_labels.xhtml
+++ b/src/main/webapp/lab/dynamic_labels.xhtml
@@ -15,6 +15,10 @@
                 <h:form>
                     <p:panelGrid columns="1" >
                         <p:panel header="Select Investigation and Field" >
+                             <p:commandButton 
+                                value="Back" 
+                                class="my-1"
+                                action="/admin/lims/investigation" ajax="false" ></p:commandButton>
                             <p:panelGrid columns="2" >
 
 
