--- a/src/main/webapp/lab/value_sets.xhtml
+++ b/src/main/webapp/lab/value_sets.xhtml
@@ -16,6 +16,10 @@
 
 
                     <p:panel header="Manage Investigatio Field value suggestions and defaults" >
+                        <p:commandButton 
+                                value="Back" 
+                                class="my-1"
+                                action="/admin/lims/investigation" ajax="false" ></p:commandButton>
 
                         <p:panelGrid columns="1" >
 
