--- a/src/main/webapp/emr/patient_profile.xhtml
+++ b/src/main/webapp/emr/patient_profile.xhtml
@@ -109,6 +109,8 @@
 
                                                 <div class="row m-2" >
                                                     <div class="col-md-12" >
+                                                        
+                                                        #{documentTeamplateController}
                                                         <p:dataTable
                                                             id="tblDxx"
                                                             value="#{patientEncounterController.patientDiagnoses}"
