Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/opd_visit.xhtml
+++ b/src/main/webapp/emr/opd_visit.xhtml
@@ -268,6 +268,8 @@
 
                                     <p:messages id="msgs" ></p:messages>
 
+                                    #{documentTeamplateController}
+                                    
                                     <p:selectOneListbox 
                                         id="lstEncounterDocs"
                                         value="#{patientEncounterController.encounterReferral}" var="ref" >
